@@ -28,6 +28,9 @@ Version 1.5.0 ??? (CVS)
 
 - Fixed support for multi character delimiters in .mid file (bug 1266)
 
+- Fixed reading Mills.mif (TABPoint::ReadGeometryFromMIFFFile()), the check
+  for SYMBOL didn't check if pszLine was non-NULL.
+
 
 Version 1.5.0-beta1 (2005-10-07)
 --------------------------------
@@ -691,5 +694,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.153 2006-01-26 21:26:36 fwarmerdam Exp $
+$Id: HISTORY.TXT,v 1.154 2006-01-27 13:44:44 fwarmerdam Exp $
 ------------
